--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         <div class="col-md-12">
                             <h1 class="m-b-20"><strong>ENEPET <br> 2020</strong></h1>
                             <p class="m-b-40"> Em construção <br> e ainda em construção.</p>
-                            <p><a class="btn hvr-hover" href="#">Saiba mais</a></p>
+                            <p><a class="btn hvr-hover" href="news.html">Saiba mais</a></p>
                         </div>
                     </div>
                 </div>
@@ -114,7 +114,7 @@
                         <div class="col-md-12">
                             <h1 class="m-b-20"><strong>ENEPET <br> 2020</strong></h1>
                             <p class="m-b-40">Em construção <br> e ainda em construção.</p>
-                            <p><a class="btn hvr-hover" href="#">Saiba mais!</a></p>
+                            <p><a class="btn hvr-hover" href="news.html">Saiba mais!</a></p>
                         </div>
                     </div>
                 </div>
@@ -126,7 +126,7 @@
                         <div class="col-md-12">
                             <h1 class="m-b-20"><strong>ENEPET <br> 2020</strong></h1>
                             <p class="m-b-40">Em construção <br> e ainda em construção.</p>
-                            <p><a class="btn hvr-hover" href="#">Saiba mais!</a></p>
+                            <p><a class="btn hvr-hover" href="news.html">Saiba mais!</a></p>
                         </div>
                     </div>
                 </div>
@@ -145,49 +145,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="title-all text-center">
-                        <h1>Últimas Notícias</h1>
-                        <p>Não perca nenhuma novidade!</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6 col-lg-4 col-xl-4">
-                    <div class="blog-box">
-                        <div class="blog-img">
-                            <img class="img-fluid" src="images/blog-img.jpg" alt="" />
-                        </div>
-                        <div class="blog-content">
-                            <div class="title-blog">
-                                <h3>Em construcão</h3>
-                                <p>Bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla e bla.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-4 col-xl-4">
-                    <div class="blog-box">
-                        <div class="blog-img">
-                            <img class="img-fluid" src="images/blog-img-01.jpg" alt="" />
-                        </div>
-                        <div class="blog-content">
-                            <div class="title-blog">
-                                <h3>Alguma coisa</h3>
-                                <p>Bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla e bla.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-4 col-xl-4">
-                    <div class="blog-box">
-                        <div class="blog-img">
-                            <img class="img-fluid" src="images/blog-img-02.jpg" alt="" />
-                        </div>
-                        <div class="blog-content">
-                            <div class="title-blog">
-                                <h3>Vai ficar pronto algum dia</h3>
-                                <p>Bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla e bla.</p>
-                            </div>
-                        </div>
+                        <h1>Sobre</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
                     </div>
                 </div>
             </div>
