--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Site Metas -->
-    <title>Enepet 2020</title>
+    <title>ENEPET 2020</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -53,7 +53,7 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="navbar-menu">
                     <ul class="nav navbar-nav ml-auto" data-in="fadeInDown" data-out="fadeOutUp">
-                        <li class="nav-item active"><a class="nav-link" href="index.html">Início</a></li>
+                        <li class="nav-item"><a class="nav-link" href="">Notícias</a></li>
                         <li class="nav-item"><a class="nav-link" href="service.html">Programação</a></li>
                         <li class="nav-item"><a class="nav-link" href="about.html">Local</a></li>
                         <li class="dropdown megamenu-fw">
@@ -82,6 +82,7 @@
                             </ul>
                         </li>
                         <li class="nav-item"><a class="nav-link" href="registrations.html">Inscrições</a></li>
+                        <li class="nav-item"><a class="nav-link" href="">Anais</a></li>
                         <li class="nav-item"><a class="nav-link" href="contact-us.html">Fale Conosco</a></li>
                     </ul>
                 </div>
@@ -102,7 +103,7 @@
                         <div class="col-md-12">
                             <h1 class="m-b-20"><strong>ENEPET <br> 2020</strong></h1>
                             <p class="m-b-40"> Em construção <br> e ainda em construção.</p>
-                            <p><a class="btn hvr-hover" href="news.html">Saiba mais</a></p>
+                            <p><a class="btn hvr-hover" href="#">Saiba mais</a></p>
                         </div>
                     </div>
                 </div>
@@ -114,7 +115,7 @@
                         <div class="col-md-12">
                             <h1 class="m-b-20"><strong>ENEPET <br> 2020</strong></h1>
                             <p class="m-b-40">Em construção <br> e ainda em construção.</p>
-                            <p><a class="btn hvr-hover" href="news.html">Saiba mais!</a></p>
+                            <p><a class="btn hvr-hover" href="#">Saiba mais!</a></p>
                         </div>
                     </div>
                 </div>
@@ -126,7 +127,7 @@
                         <div class="col-md-12">
                             <h1 class="m-b-20"><strong>ENEPET <br> 2020</strong></h1>
                             <p class="m-b-40">Em construção <br> e ainda em construção.</p>
-                            <p><a class="btn hvr-hover" href="news.html">Saiba mais!</a></p>
+                            <p><a class="btn hvr-hover" href="#">Saiba mais!</a></p>
                         </div>
                     </div>
                 </div>
@@ -145,8 +146,49 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="title-all text-center">
-                        <h1>Sobre</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                        <h1>Últimas Notícias</h1>
+                        <p>Não perca nenhuma novidade!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 col-lg-4 col-xl-4">
+                    <div class="blog-box">
+                        <div class="blog-img">
+                            <img class="img-fluid" src="images/blog-img.jpg" alt="" />
+                        </div>
+                        <div class="blog-content">
+                            <div class="title-blog">
+                                <h3>Em construcão</h3>
+                                <p>Bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla e bla.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4 col-xl-4">
+                    <div class="blog-box">
+                        <div class="blog-img">
+                            <img class="img-fluid" src="images/blog-img-01.jpg" alt="" />
+                        </div>
+                        <div class="blog-content">
+                            <div class="title-blog">
+                                <h3>Alguma coisa</h3>
+                                <p>Bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla e bla.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4 col-xl-4">
+                    <div class="blog-box">
+                        <div class="blog-img">
+                            <img class="img-fluid" src="images/blog-img-02.jpg" alt="" />
+                        </div>
+                        <div class="blog-content">
+                            <div class="title-blog">
+                                <h3>Vai ficar pronto algum dia</h3>
+                                <p>Bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla e bla.</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
