--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Site Metas -->
-    <title>ThewayShop - Ecommerce Bootstrap 4 HTML Template</title>
+    <title>ENEPET 2020</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -54,7 +54,7 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="navbar-menu">
                     <ul class="nav navbar-nav ml-auto" data-in="fadeInDown" data-out="fadeOutUp">
-                        <li class="nav-item active"><a class="nav-link" href="index.html">Início</a></li>
+                        <li class="nav-item"><a class="nav-link" href="">Notícias</a></li>
                         <li class="nav-item"><a class="nav-link" href="service.html">Programação</a></li>
                         <li class="nav-item"><a class="nav-link" href="about.html">Local</a></li>
                         <li class="dropdown megamenu-fw">
@@ -83,6 +83,7 @@
                             </ul>
                         </li>
                         <li class="nav-item"><a class="nav-link" href="registrations.html">Inscrições</a></li>
+                        <li class="nav-item"><a class="nav-link" href="">Anais</a></li>
                         <li class="nav-item"><a class="nav-link" href="contact-us.html">Fale Conosco</a></li>
                     </ul>
                 </div>
