--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <body>
     <!-- Start Main Top -->
-    <header class="main-header">
+    <header class="main-header fixed-menu">
         <!-- Start Navigation -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-default bootsnav">
             <div class="container">
@@ -93,7 +93,7 @@
     <!-- End Main Top -->
 
     <!-- Start Slider -->
-    <div id="slides-shop" class="cover-slides">
+    <div style="margin-top:100px" id="slides-shop" class="cover-slides">
         <ul class="slides-container">
             <li class="text-left">
                 <img src="images/banner-01.jpg" alt="">
